--- a/etc/sparky-aptus-update.desktop
+++ b/etc/sparky-aptus-update.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=APTus Upgrade Checker
 Comment=SparkyLinux Updater
-Exec=sudo /usr/bin/sparky-aptus-upgrade-checker
+Exec=/usr/bin/sparky-aptus-upgrade-checker
 Terminal=false
 Type=Application
 
