--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -4,10 +4,10 @@ Encoding=UTF-8
 Name=System Upgrade Scheduler
 GenericName=System Upgrade Scheduler
 Name[pl]=Harmonogram Aktualizacji Systemu
-Name[pt_BR]=Agendador de Atualização do Sistema
+Name[pt_BR]=Agendar Atualização do Sistema
 Comment=System upgrade scheduler
 Comment[pl]=Harmonogram aktualizacji systemu
-Comment[pt_BR]=Agendador de atualização do sistema
+Comment[pt_BR]=Agendar atualização do sistema
 Exec=/usr/bin/sparky-aptus-upgrade-cron
 Icon=appointment
 Terminal=false
