--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -3,9 +3,11 @@ Version=1.0
 Encoding=UTF-8
 Name=System Upgrade Scheduler
 GenericName=System Upgrade Scheduler
+Name[de]=System Upgrade Planer
 Name[pl]=Harmonogram Aktualizacji Systemu
 Name[pt_BR]=Agendar Atualização do Sistema
 Comment=System upgrade scheduler
+Comment[de]=System Upgrade Planer
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
 Exec=/usr/bin/sparky-aptus-upgrade-cron
