--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -4,10 +4,14 @@ Encoding=UTF-8
 Name=System Upgrade Scheduler
 GenericName=System Upgrade Scheduler
 Name[de]=System Upgrade Planer
+Name[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
+Name[ja_JP]=システムアップグレードスケジューラ
 Name[pl]=Harmonogram Aktualizacji Systemu
 Name[pt_BR]=Agendar Atualização do Sistema
 Comment=System upgrade scheduler
 Comment[de]=System Upgrade Planer
+Comment[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
+Comment[ja_JP]=システムアップグレードスケジューラ
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
 Exec=/usr/bin/sparky-aptus-upgrade-cron
