add Chinese translation
* add zh_CN file
* edit desktop file
* edit bin/sparky-aptus-upgrade-checker
* edit bin/sparky-aptus-upgrade-cron

--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -8,12 +8,14 @@ Name[el_GR]=Χρονικός Προγραμματισμός Αναβάθμιση
 Name[ja_JP]=システムアップグレードスケジューラ
 Name[pl]=Harmonogram Aktualizacji Systemu
 Name[pt_BR]=Agendar Atualização do Sistema
+Name[zh_CN]=系统更新时间表
 Comment=System upgrade scheduler
 Comment[de]=System Upgrade Planer
 Comment[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
 Comment[ja_JP]=システムアップグレードスケジューラ
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
+Comment[zh_CN]=系统更新时间表
 Exec=/usr/bin/sparky-aptus-upgrade-cron
 Icon=appointment
 Terminal=false
