--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -5,6 +5,8 @@ Name=System Upgrade Scheduler
 GenericName=System Upgrade Scheduler
 Name[de]=System Upgrade Planer
 Name[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
+Name[es]=Planificador de actualizaciones del sistema
+Name[it]=Pianificatore degli Aggiornamenti del Sistema
 Name[ja_JP]=システムアップグレードスケジューラ
 Name[pl]=Harmonogram Aktualizacji Systemu
 Name[pt_BR]=Agendar Atualização do Sistema
@@ -13,6 +15,7 @@ Name[zh_CN]=系统更新时间表
 Comment=System upgrade scheduler
 Comment[de]=System Upgrade Planer
 Comment[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
+Comment[es]=Planificador de actualizaciones del sistema
 Comment[ja_JP]=システムアップグレードスケジューラ
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
