--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -11,6 +11,7 @@ Name[ja_JP]=システムアップグレードスケジューラ
 Name[pl]=Harmonogram Aktualizacji Systemu
 Name[pt_BR]=Agendar Atualização do Sistema
 Name[sk]=Plán aktualizácií systému
+Name[uk]=Планувальник оновлень системи
 Name[zh_CN]=系统更新时间表
 Comment=System upgrade scheduler
 Comment[de]=System Upgrade Planer
@@ -20,6 +21,7 @@ Comment[ja_JP]=システムアップグレードスケジューラ
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
 Comment[sk]=Plán aktualizácií systému
+Comment[uk]=Планувальник оновлень системи
 Comment[zh_CN]=系统更新时间表
 Exec=/usr/bin/sparky-aptus-upgrade-cron
 Icon=appointment
