--- a/share/sparky-aptus-upgrade-cron.desktop
+++ b/share/sparky-aptus-upgrade-cron.desktop
@@ -6,6 +6,7 @@ GenericName=System Upgrade Scheduler
 Name[de]=System Upgrade Planer
 Name[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
 Name[es]=Planificador de actualizaciones del sistema
+Name[hu]=Rendszerfrissítés ütemező
 Name[it]=Pianificatore degli Aggiornamenti del Sistema
 Name[ja_JP]=システムアップグレードスケジューラ
 Name[pl]=Harmonogram Aktualizacji Systemu
@@ -17,6 +18,7 @@ Comment=System upgrade scheduler
 Comment[de]=System Upgrade Planer
 Comment[el_GR]=Χρονικός Προγραμματισμός Αναβάθμισης Συστήματος
 Comment[es]=Planificador de actualizaciones del sistema
+Comment[hu]=Rendszerfrissítés ütemező
 Comment[ja_JP]=システムアップグレードスケジューラ
 Comment[pl]=Harmonogram aktualizacji systemu
 Comment[pt_BR]=Agendar atualização do sistema
